# prometheus-axum-middleware

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  publish.yml
src/: lib.rs  metrics.rs  middleware.rs  pusher.rs  remote_write.rs  render.rs  tests.rs
