[package]
name = "prometheus-axum-middleware"
version = "0.1.1"
edition = "2024"
author = [ "Gabriele Greco <ggr@veo.co>" ]
license = "MIT OR Apache-2.0"
repository = "https://github.com/veo-technologies/prometheus-axum-middleware"
description = "An axum layer to add prometheus metrics"

[dependencies]
axum = "0.8"
prometheus = "0.14"
prometheus-reqwest-remote-write = { version = "0.4", optional = true }
reqwest = { version = "0.12", default-features = false, optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = { version = "0.1", optional = true }
base64 = { version = "0.22", optional = true }
tower = "0.5.2"

[features]
default = [ "remote-write" ]
remote-write = [ "prometheus-reqwest-remote-write", "reqwest", "base64", "tracing" ]